--- a/openGl-Graphics.vcxproj.filters
+++ b/openGl-Graphics.vcxproj.filters
@@ -22,13 +22,13 @@
     <ClCompile Include="sources\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="glad.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="sources\fileHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Shader.cpp">
+    <ClCompile Include="sources\Shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="sources\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
